// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> should render when MetaMask initialized 1`] = `
<nav
  className="sc-bdvvtL dqBChi navbar navbar-expand navbar-light bg-light"
>
  <div
    className="container-fluid"
  >
    <span
      className="navbar-brand"
    >
      ToDEX
    </span>
    <span
      className="navbar-text"
    >
      Ξ 10.5
    </span>
    <span
      className="navbar-text"
    >
      TDX 1,000.5
    </span>
    <button
      className="btn btn-primary"
      disabled={false}
      onClick={[MockFunction]}
      type="button"
    >
      Connect Wallet
    </button>
  </div>
</nav>
`;

exports[`<Header /> should render when MetaMask not initialized 1`] = `
<nav
  className="sc-bdvvtL dqBChi navbar navbar-expand navbar-light bg-light"
>
  <div
    className="container-fluid"
  >
    <span
      className="navbar-brand"
    >
      ToDEX
    </span>
  </div>
</nav>
`;

exports[`<Header /> should render when no account connected 1`] = `
<nav
  className="sc-bdvvtL dqBChi navbar navbar-expand navbar-light bg-light"
>
  <div
    className="container-fluid"
  >
    <span
      className="navbar-brand"
    >
      ToDEX
    </span>
    <button
      className="btn btn-primary"
      disabled={false}
      onClick={[MockFunction]}
      type="button"
    >
      Connect Wallet
    </button>
  </div>
</nav>
`;
